--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_storage: ^11.6.9
   flutter_background: ^1.2.0
   collection: ^1.18.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
