--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_background: ^1.2.0
   collection: ^1.18.0
   intl: ^0.19.0
+  image: ^4.2.0
 
 dev_dependencies:
   flutter_test:
