--- a/firebase.json
+++ b/firebase.json
@@ -31,7 +31,7 @@
     ],
     "rewrites": [
       {
-        "source": "**",
+        "source": "/admin-panel/**",
         "destination": "/index.html"
       }
     ]
